Regression: Blender 3.4.0 Release Candidate crash on 'Mask by Color' #102940

Closed
opened 2022-12-04 13:32:26 +01:00 by Hoang Duy Tran · 14 comments
Member

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 645 Intel Inc. 4.1 INTEL-14.7.18

Blender Version
Broken: version: 3.4.0 Release Candidate, branch: blender-v3.4-release, commit date: 2022-12-02 17:21, hash: 99dc90accc

Caused by b5f7af31d6

Short description of error
System crashed in sculpting mode, after painted an area on Cube (5 subdiv, applied) and selected painted area to use as Mask (using Mask by Color tool)

Exact steps for others to reproduce the error

  • Using default cube
  • Subdiv 5 (Ctrl+5), go to modifier stack, apply
  • Sculpt Mode, select Paint tool, choose a color, max Strength to 1.000
  • Paint an area on cube
  • Switch brush to Mask by Color
  • Select the coloured area done by Paint tool
  • System crash

Image before crash:
Screenshot 2022-12-03 at 19.19.56.png

Process: Blender [44992]
Path: /Applications/Blender.app/Contents/MacOS/Blender
Identifier: org.blenderfoundation.blender
Version: 3.4.0 (3.4.0 2022-12-03)
Code Type: X86-64 (Native)
Parent Process: ??? [1]
Responsible: Blender [44992]
User ID: 501

Date/Time: 2022-12-03 19:19:59.093 +0000
OS Version: Mac OS X 10.15.7 (19H1419)
Report Version: 12
Bridge OS Version: 6.2 (19P744)
Anonymous UUID: 29633173-69F8-B63D-9259-C195A2A36155

Sleep/Wake UUID: 303F3F0C-180B-494A-8A54-99DBC54997BD

Time Awake Since Boot: 1100000 seconds
Time Since Wake: 1300 seconds

System Integrity Protection: enabled

Crashed Thread: 12

Exception Type: EXC_BAD_ACCESS (SIGSEGV)
Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000000
Exception Note: EXC_CORPSE_NOTIFY

Termination Signal: Segmentation fault: 11
Termination Reason: Namespace SIGNAL, Code 0xb
Terminating Process: exc handler [44992]

I opened this task

https://developer.blender.org/T102933

and archived it as I thought I could not recreate the crash, but I tested again and Blender crashed again today.

**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 645 Intel Inc. 4.1 INTEL-14.7.18 **Blender Version** Broken: version: 3.4.0 Release Candidate, branch: blender-v3.4-release, commit date: 2022-12-02 17:21, hash: `99dc90accc` Caused by b5f7af31d6 **Short description of error** System crashed in sculpting mode, after painted an area on Cube (5 subdiv, applied) and selected painted area to use as Mask (using Mask by Color tool) **Exact steps for others to reproduce the error** - Using default cube - Subdiv 5 (Ctrl+5), go to modifier stack, apply - Sculpt Mode, select Paint tool, choose a color, max Strength to 1.000 - Paint an area on cube - Switch brush to Mask by Color - Select the coloured area done by Paint tool - System crash Image before crash: ![Screenshot 2022-12-03 at 19.19.56.png](https://archive.blender.org/developer/F13989615/Screenshot_2022-12-03_at_19.19.56.png) Process: Blender [44992] Path: /Applications/Blender.app/Contents/MacOS/Blender Identifier: org.blenderfoundation.blender Version: 3.4.0 (3.4.0 2022-12-03) Code Type: X86-64 (Native) Parent Process: ??? [1] Responsible: Blender [44992] User ID: 501 Date/Time: 2022-12-03 19:19:59.093 +0000 OS Version: Mac OS X 10.15.7 (19H1419) Report Version: 12 Bridge OS Version: 6.2 (19P744) Anonymous UUID: 29633173-69F8-B63D-9259-C195A2A36155 Sleep/Wake UUID: 303F3F0C-180B-494A-8A54-99DBC54997BD Time Awake Since Boot: 1100000 seconds Time Since Wake: 1300 seconds System Integrity Protection: enabled Crashed Thread: 12 Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000000 Exception Note: EXC_CORPSE_NOTIFY Termination Signal: Segmentation fault: 11 Termination Reason: Namespace SIGNAL, Code 0xb Terminating Process: exc handler [44992] I opened this task https://developer.blender.org/T102933 and archived it as I thought I could not recreate the crash, but I tested again and Blender crashed again today.
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk

Added subscriber: @mod_moder

Added subscriber: @mod_moder

I could not confirm the previous version of the report.

I could not confirm the previous version of the report.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce the crash in 3.4rc hash: 99dc90accc2e and
3.5 hash: 9719fd696488
3.3.1 does not crash, so setting to high.

Stack trace:
blender.exe         :0x00007FF6B7E2DC10  do_mask_by_color_task_cb C:\blender-git\blender\source\blender\editors\sculpt_paint\sculpt_ops.c:860
blender.exe         :0x00007FF6BCD92C80  tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::int C:\blender-git\lib\win64_vc15\tbb\include\tbb\partitioner.h:423
blender.exe         :0x00007FF6BCD934D0  tbb::interface9::internal::start_for<tbb::blocked_range<int>,RangeTask,tbb::auto_partitioner const  C:\blender-git\lib\win64_vc15\tbb\include\tbb\parallel_for.h:143
tbb.dll             :0x00007FFE0B2AF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFE0B2AF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFE0B2AF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
blender.exe         :0x00007FF6BCD93790  BLI_task_parallel_range C:\blender-git\blender\source\blender\blenlib\intern\task_range.cc:117
blender.exe         :0x00007FF6B7E2EE10  sculpt_mask_by_color_full_mesh C:\blender-git\blender\source\blender\editors\sculpt_paint\sculpt_ops.c:900
blender.exe         :0x00007FF6B7E2F010  sculpt_mask_by_color_invoke C:\blender-git\blender\source\blender\editors\sculpt_paint\sculpt_ops.c:947
blender.exe         :0x00007FF6B752FF50  wm_operator_invoke C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:1451
blender.exe         :0x00007FF6B752D880  wm_handler_operator_call C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:2480
blender.exe         :0x00007FF6B752F2F0  wm_handlers_do_keymap_with_keymap_handler C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:2880
blender.exe         :0x00007FF6B752EA70  wm_handlers_do_intern C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3201
blender.exe         :0x00007FF6B752DEA0  wm_handlers_do C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3342
blender.exe         :0x00007FF6B7534430  wm_event_do_handlers C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3984
blender.exe         :0x00007FF6B7519DD0  WM_main C:\blender-git\blender\source\blender\windowmanager\intern\wm.c:643
blender.exe         :0x00007FF6B65D8030  main C:\blender-git\blender\source\creator\creator.c:582
blender.exe         :0x00007FF6BCF1ABE0  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFE2CE674A0  BaseThreadInitThunk
ntdll.dll           :0x00007FFE2EA62680  RtlUserThreadStart
I can reproduce the crash in 3.4rc hash: `99dc90accc2e` and 3.5 hash: `9719fd696488` 3.3.1 does not crash, so setting to high. ``` Stack trace: blender.exe :0x00007FF6B7E2DC10 do_mask_by_color_task_cb C:\blender-git\blender\source\blender\editors\sculpt_paint\sculpt_ops.c:860 blender.exe :0x00007FF6BCD92C80 tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::int C:\blender-git\lib\win64_vc15\tbb\include\tbb\partitioner.h:423 blender.exe :0x00007FF6BCD934D0 tbb::interface9::internal::start_for<tbb::blocked_range<int>,RangeTask,tbb::auto_partitioner const C:\blender-git\lib\win64_vc15\tbb\include\tbb\parallel_for.h:143 tbb.dll :0x00007FFE0B2AF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFE0B2AF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFE0B2AF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire blender.exe :0x00007FF6BCD93790 BLI_task_parallel_range C:\blender-git\blender\source\blender\blenlib\intern\task_range.cc:117 blender.exe :0x00007FF6B7E2EE10 sculpt_mask_by_color_full_mesh C:\blender-git\blender\source\blender\editors\sculpt_paint\sculpt_ops.c:900 blender.exe :0x00007FF6B7E2F010 sculpt_mask_by_color_invoke C:\blender-git\blender\source\blender\editors\sculpt_paint\sculpt_ops.c:947 blender.exe :0x00007FF6B752FF50 wm_operator_invoke C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:1451 blender.exe :0x00007FF6B752D880 wm_handler_operator_call C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:2480 blender.exe :0x00007FF6B752F2F0 wm_handlers_do_keymap_with_keymap_handler C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:2880 blender.exe :0x00007FF6B752EA70 wm_handlers_do_intern C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3201 blender.exe :0x00007FF6B752DEA0 wm_handlers_do C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3342 blender.exe :0x00007FF6B7534430 wm_event_do_handlers C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3984 blender.exe :0x00007FF6B7519DD0 WM_main C:\blender-git\blender\source\blender\windowmanager\intern\wm.c:643 blender.exe :0x00007FF6B65D8030 main C:\blender-git\blender\source\creator\creator.c:582 blender.exe :0x00007FF6BCF1ABE0 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFE2CE674A0 BaseThreadInitThunk ntdll.dll :0x00007FFE2EA62680 RtlUserThreadStart ```
Evan Wilson changed title from Blender 3.4.0 Intel Release Candidate crash on 'Mask by Color' to Blender 3.4.0 Release Candidate crash on 'Mask by Color' 2022-12-05 07:51:22 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

bisecting...

bisecting...
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Member

Added subscribers: @HooglyBoogly, @JosephEagar

Added subscribers: @HooglyBoogly, @JosephEagar
Member

Caused by b5f7af31d6

CC @HooglyBoogly
CC @JosephEagar

Might be a missing call to BKE_sculpt_mask_layers_ensure in sculpt_mask_by_color_invoke?
Also: I dont really get why we create a color layer there? Seemed perfectly fine to early out in case there is nothing to mask? See 2b191cd2b4

Caused by b5f7af31d6 CC @HooglyBoogly CC @JosephEagar Might be a missing call to `BKE_sculpt_mask_layers_ensure` in `sculpt_mask_by_color_invoke`? Also: I dont really get why we create a `color` layer there? Seemed perfectly fine to early out in case there is nothing to mask? See 2b191cd2b4
Philipp Oeser changed title from Blender 3.4.0 Release Candidate crash on 'Mask by Color' to Regression: Blender 3.4.0 Release Candidate crash on 'Mask by Color' 2022-12-05 10:25:12 +01:00
Hans Goudey self-assigned this 2022-12-05 14:38:39 +01:00

This issue was referenced by 64541b242a

This issue was referenced by 64541b242aa9378b87f9e699f2838b1f86506bb0

This issue was referenced by 995f757049

This issue was referenced by 995f757049dc9c05a9405f84ed9311d5c6acdde7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.4 milestone 2023-02-07 19:01:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102940
No description provided.